Closed Bug 1141026 Opened 9 years ago Closed 9 years ago

BroadcastChannel can unregister a feature when not registered.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox37 --- unaffected
firefox38 + fixed
firefox39 + fixed

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(1 file)

Attached patch feature.patchSplinter Review
      No description provided.
Attachment #8574630 - Flags: review?(bugs)
Blocks: 1140804
OS: Linux → All
Hardware: x86_64 → All
Attachment #8574630 - Flags: review?(bugs) → review+
Comment on attachment 8574630 [details] [diff] [review]
feature.patch

Approval Request Comment
[Feature/regressing bug #]: 966439
[User impact if declined]: we can a wrong behavior when a broadcast channel is created in a worker and that worker shutdowns immediately after.
[Describe test coverage new/current, TreeHerder]: it's a race condition. Hard to test with a mochitest
[Risks and why]: none
[String/UUID change made/needed]: none
Attachment #8574630 - Flags: approval-mozilla-beta?
Attachment #8574630 - Flags: approval-mozilla-aurora?
(In reply to Andrea Marchesini (:baku) from comment #3)
> [Feature/regressing bug #]: 966439

Bug 966439 landed in 38 (currently Aurora). Is this fix required in 37 Beta?
Flags: needinfo?(amarchesini)
https://hg.mozilla.org/mozilla-central/rev/b02f6e654f5c
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Comment on attachment 8574630 [details] [diff] [review]
feature.patch

No, beta is not needed.
Flags: needinfo?(amarchesini)
Attachment #8574630 - Flags: approval-mozilla-beta?
Attachment #8574630 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: