Bug 1141026 - BroadcastChannel should throw if it fails registering the worker feature. r=smaug, a=lsblakk